--- a/public/css/style.css
+++ b/public/css/style.css
@@ -648,6 +648,10 @@ video {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -656,12 +660,20 @@ video {
   position: relative;
 }
 
+.sticky{
+  position: sticky;
+}
+
 .left-2{
   left: 0.5rem;
 }
 
 .top-6{
   top: 1.5rem;
+}
+
+.top-0{
+  top: 0px;
 }
 
 .-z-10{
@@ -677,12 +689,25 @@ video {
   margin-right: auto;
 }
 
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .-mt-4{
   margin-top: -1rem;
 }
 
 .mt-2{
   margin-top: 0.5rem;
+}
+
+.mb-1{
+  margin-bottom: 0.25rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
 }
 
 .flex{
@@ -721,6 +746,14 @@ video {
   height: 100%;
 }
 
+.h-\[18rem\]{
+  height: 18rem;
+}
+
+.h-\[15rem\]{
+  height: 15rem;
+}
+
 .w-12{
   width: 3rem;
 }
@@ -753,6 +786,10 @@ video {
   max-width: 42rem;
 }
 
+.max-w-4xl{
+  max-width: 56rem;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
@@ -781,6 +818,10 @@ video {
   align-items: center;
 }
 
+.justify-start{
+  justify-content: flex-start;
+}
+
 .justify-center{
   justify-content: center;
 }
@@ -795,6 +836,10 @@ video {
 
 .gap-4{
   gap: 1rem;
+}
+
+.gap-8{
+  gap: 2rem;
 }
 
 .self-end{
@@ -825,6 +870,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
 .rounded-b-md{
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -841,6 +890,11 @@ video {
 
 .border-2{
   border-width: 2px;
+}
+
+.border-y-2{
+  border-top-width: 2px;
+  border-bottom-width: 2px;
 }
 
 .border-t{
@@ -906,6 +960,20 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-secondaryYellow{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 232 16 / var(--tw-bg-opacity));
+}
+
+.bg-secondaryGray{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 234 234 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-80{
+  --tw-bg-opacity: 0.8;
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -955,6 +1023,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-\[16px\]{
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
 .pb-10{
   padding-bottom: 2.5rem;
 }
@@ -981,6 +1054,14 @@ video {
 
 .pt-8{
   padding-top: 2rem;
+}
+
+.pt-\[16px\]{
+  padding-top: 16px;
+}
+
+.text-left{
+  text-align: left;
 }
 
 .text-center{
@@ -1100,8 +1181,56 @@ video {
   outline-offset: 2px;
 }
 
+.transition{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 body{
   font-family: Montserrat;
+}
+
+@media (min-width: 1024px){
+  .lg\:container{
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 16px;
+    padding-left: 16px;
+  }
+
+  @media (min-width: 640px){
+    .lg\:container{
+      max-width: 640px;
+    }
+  }
+
+  @media (min-width: 768px){
+    .lg\:container{
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 1024px){
+    .lg\:container{
+      max-width: 1024px;
+    }
+  }
+
+  @media (min-width: 1280px){
+    .lg\:container{
+      max-width: 1280px;
+    }
+  }
+
+  @media (min-width: 1320px){
+    .lg\:container{
+      max-width: 1320px;
+    }
+  }
 }
 
 .hover\:bg-primary:hover{
@@ -1232,12 +1361,40 @@ body{
 }
 
 @media (min-width: 1024px){
+  .lg\:mt-4{
+    margin-top: 1rem;
+  }
+
+  .lg\:flex{
+    display: flex;
+  }
+
   .lg\:h-screen{
     height: 100vh;
   }
 
+  .lg\:h-40{
+    height: 10rem;
+  }
+
+  .lg\:h-\[15rem\]{
+    height: 15rem;
+  }
+
   .lg\:w-\[40rem\]{
     width: 40rem;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
+  .lg\:w-10\/12{
+    width: 83.333333%;
+  }
+
+  .lg\:w-3\/4{
+    width: 75%;
   }
 
   .lg\:grid-cols-5{
@@ -1250,5 +1407,69 @@ body{
 
   .lg\:gap-0{
     gap: 0px;
+  }
+
+  .lg\:bg-backgroundColor{
+    --tw-bg-opacity: 1;
+    background-color: rgb(245 246 251 / var(--tw-bg-opacity));
+  }
+
+  .lg\:p-\[16px\]{
+    padding: 16px;
+  }
+
+  .lg\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:px-\[16px\]{
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .lg\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:pt-24{
+    padding-top: 6rem;
+  }
+
+  .lg\:pt-32{
+    padding-top: 8rem;
+  }
+
+  .lg\:pb-4{
+    padding-bottom: 1rem;
+  }
+
+  .lg\:pb-2{
+    padding-bottom: 0.5rem;
+  }
+
+  .lg\:pt-4{
+    padding-top: 1rem;
+  }
+
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
