--- a/public/css/style.css
+++ b/public/css/style.css
@@ -668,12 +668,12 @@ video {
   left: 0.5rem;
 }
 
-.top-6{
-  top: 1.5rem;
-}
-
 .top-0{
   top: 0px;
+}
+
+.top-6{
+  top: 1.5rem;
 }
 
 .-z-10{
@@ -698,16 +698,36 @@ video {
   margin-top: -1rem;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
-}
-
 .mb-1{
   margin-bottom: 0.25rem;
 }
 
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .mt-4{
   margin-top: 1rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
+}
+
+.mt-16{
+  margin-top: 4rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
+}
+
+.block{
+  display: block;
 }
 
 .flex{
@@ -734,8 +754,8 @@ video {
   height: 10rem;
 }
 
-.h-\[10rem\]{
-  height: 10rem;
+.h-\[15rem\]{
+  height: 15rem;
 }
 
 .h-\[2rem\]{
@@ -746,12 +766,24 @@ video {
   height: 100%;
 }
 
+.h-\[4re\2c \]{
+  height: 4re,;
+}
+
+.h-\[4rem\]{
+  height: 4rem;
+}
+
 .h-\[18rem\]{
   height: 18rem;
 }
 
-.h-\[15rem\]{
-  height: 15rem;
+.h-\[16rem\]{
+  height: 16rem;
+}
+
+.h-\[1rem\]{
+  height: 1rem;
 }
 
 .w-12{
@@ -782,12 +814,48 @@ video {
   width: 100%;
 }
 
+.w-96{
+  width: 24rem;
+}
+
+.w-\[20rem\]{
+  width: 20rem;
+}
+
+.w-\[25rem\]{
+  width: 25rem;
+}
+
+.w-\[19rem\]{
+  width: 19rem;
+}
+
+.w-\[10rem\]{
+  width: 10rem;
+}
+
+.w-\[50rem\]{
+  width: 50rem;
+}
+
+.w-\[30rem\]{
+  width: 30rem;
+}
+
 .max-w-2xl{
   max-width: 42rem;
 }
 
-.max-w-4xl{
-  max-width: 56rem;
+.max-w-xs{
+  max-width: 20rem;
+}
+
+.max-w-full{
+  max-width: 100%;
+}
+
+.max-w-xl{
+  max-width: 36rem;
 }
 
 .flex-1{
@@ -866,14 +934,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-
-.rounded-sm{
-  border-radius: 0.125rem;
-}
-
 .rounded-b-md{
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -890,11 +950,6 @@ video {
 
 .border-2{
   border-width: 2px;
-}
-
-.border-y-2{
-  border-top-width: 2px;
-  border-bottom-width: 2px;
 }
 
 .border-t{
@@ -931,11 +986,6 @@ video {
   background-color: rgb(245 246 251 / var(--tw-bg-opacity));
 }
 
-.bg-backgroundFooter{
-  --tw-bg-opacity: 1;
-  background-color: rgb(6 22 91 / var(--tw-bg-opacity));
-}
-
 .bg-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(41 41 41 / var(--tw-bg-opacity));
@@ -944,6 +994,16 @@ video {
 .bg-secondaryBlue{
   --tw-bg-opacity: 1;
   background-color: rgb(101 125 247 / var(--tw-bg-opacity));
+}
+
+.bg-secondaryGray{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 234 234 / var(--tw-bg-opacity));
+}
+
+.bg-secondaryYellow{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 232 16 / var(--tw-bg-opacity));
 }
 
 .bg-text{
@@ -958,16 +1018,6 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-secondaryYellow{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 232 16 / var(--tw-bg-opacity));
-}
-
-.bg-secondaryGray{
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 234 234 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-80{
@@ -1003,6 +1053,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-\[16px\]{
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1023,9 +1078,9 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-\[16px\]{
-  padding-left: 16px;
-  padding-right: 16px;
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .pb-10{
@@ -1058,6 +1113,14 @@ video {
 
 .pt-\[16px\]{
   padding-top: 16px;
+}
+
+.pt-16{
+  padding-top: 4rem;
+}
+
+.pt-\[20px\]{
+  padding-top: 20px;
 }
 
 .text-left{
@@ -1181,56 +1244,8 @@ video {
   outline-offset: 2px;
 }
 
-.transition{
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 body{
   font-family: Montserrat;
-}
-
-@media (min-width: 1024px){
-  .lg\:container{
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 16px;
-    padding-left: 16px;
-  }
-
-  @media (min-width: 640px){
-    .lg\:container{
-      max-width: 640px;
-    }
-  }
-
-  @media (min-width: 768px){
-    .lg\:container{
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 1024px){
-    .lg\:container{
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 1280px){
-    .lg\:container{
-      max-width: 1280px;
-    }
-  }
-
-  @media (min-width: 1320px){
-    .lg\:container{
-      max-width: 1320px;
-    }
-  }
 }
 
 .hover\:bg-primary:hover{
@@ -1361,40 +1376,36 @@ body{
 }
 
 @media (min-width: 1024px){
-  .lg\:mt-4{
-    margin-top: 1rem;
+  .lg\:mt-16{
+    margin-top: 4rem;
+  }
+
+  .lg\:block{
+    display: block;
   }
 
   .lg\:flex{
     display: flex;
   }
 
+  .lg\:hidden{
+    display: none;
+  }
+
   .lg\:h-screen{
     height: 100vh;
   }
 
-  .lg\:h-40{
-    height: 10rem;
-  }
-
-  .lg\:h-\[15rem\]{
-    height: 15rem;
+  .lg\:w-3\/4{
+    width: 75%;
   }
 
   .lg\:w-\[40rem\]{
     width: 40rem;
   }
 
-  .lg\:w-1\/2{
-    width: 50%;
-  }
-
-  .lg\:w-10\/12{
-    width: 83.333333%;
-  }
-
-  .lg\:w-3\/4{
-    width: 75%;
+  .lg\:w-full{
+    width: 100%;
   }
 
   .lg\:grid-cols-5{
@@ -1403,6 +1414,10 @@ body{
 
   .lg\:grid-cols-8{
     grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:gap-0{
@@ -1414,13 +1429,9 @@ body{
     background-color: rgb(245 246 251 / var(--tw-bg-opacity));
   }
 
-  .lg\:p-\[16px\]{
-    padding: 16px;
-  }
-
-  .lg\:py-0{
-    padding-top: 0px;
-    padding-bottom: 0px;
+  .lg\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .lg\:px-\[16px\]{
@@ -1428,48 +1439,30 @@ body{
     padding-right: 16px;
   }
 
-  .lg\:px-0{
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  .lg\:pt-24{
-    padding-top: 6rem;
-  }
-
-  .lg\:pt-32{
-    padding-top: 8rem;
-  }
-
-  .lg\:pb-4{
-    padding-bottom: 1rem;
+  .lg\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .lg\:pb-2{
     padding-bottom: 0.5rem;
   }
 
+  .lg\:pt-32{
+    padding-top: 8rem;
+  }
+
   .lg\:pt-4{
     padding-top: 1rem;
-  }
-
-  .lg\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .lg\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .lg\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 
   .lg\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
